# discord-slash-commands

./: Makefile
crates/discord_interactions/: Cargo.toml
crates/discord_interactions/src/: discord.rs  lib.rs  netlify.rs
crates/interactions/: Cargo.toml
crates/interactions/commands/: repl.json
crates/interactions/src/: main.rs
crates/repl/: Cargo.toml  options.json
crates/repl/src/: main.rs
public/: index.html
