[package]
name = "discord_interactions"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
serde = "1.0.118"
serde_json = "1.0.60"
http = "0.2.2"
netlify_lambda_http = "0.1.2"
serde_repr = "0.1.6"
