[package]
name = "discord_interactions"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sodiumoxide = "0.2.6"
serde = "1.0.118"
serde_json = "1.0.61"
http = "0.2.2"
netlify_lambda_http = { git = "https://github.com/netlify/aws-lambda-rust-runtime", branch = "main" }
serde_repr = "0.1.6"
ed25519-dalek = "1.0.1"
aws_lambda_events = "0.4.0"
hex = "0.4.2"
