[package]
name = "discord_interactions"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
serde_json = "1.0.61"
http = "0.2.2"
serde_repr = "0.1.6"
ed25519-dalek = "1.0.1"
aws_lambda_events = "0.5.0"
hex = "0.4.2"
chrono = "0.4.19"
lambda_http = "0.4.1"
lazy_static = "1.4.0"
