[package]
name = "interactions"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.61"
lazy_static = "1.4.0"
arrayvec = "0.5.2"
http = "0.2.2"
discord_interactions = { path = "../discord_interactions" }
ed25519-dalek = "1.0.1"
aws_lambda_events = "0.5.0"
hex = "0.4.2"
reqwest = { features = [
    "rustls-tls",
], default-features = false, version = "0.11.6" }
tracing-subscriber = "0.3.1"
tracing = "0.1.23"
lambda_runtime = "0.4.1"
