[package]
name = "repl"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "^0.2", features = ["full"] }
serde_json = "1.0.60"
netlify_lambda_http = "0.1.1"
# sodiumoxide = "0.2.6"
lazy_static = "1.4.0"
arrayvec = "0.5.2"
http = "0.2.2"
discord_interactions = { path = "../discord_interactions" }
ed25519-dalek = "1.0.1"
