[package]
name = "repl"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.61"
netlify_lambda_http = { git = "https://github.com/netlify/aws-lambda-rust-runtime/", branch = "event_types" }
lazy_static = "1.4.0"
arrayvec = "0.5.2"
http = "0.2.2"
discord_interactions = { path = "../discord_interactions" }
ed25519-dalek = "1.0.1"
aws_lambda_events = "0.4.0"
hex = "0.4.2"
